libnothelix/tests/snapshots/engine_snapshots__math-image-grid@120x40.snap
---
source: libnothelix/tests/engine_snapshots.rs
expression: case.output
---
viewport 120 cols x 40 rows
equation            width_pt  height_pt   rows   cols  wider_than_viewport
inline-identity        180.0       14.0      2     51  no
stacked-fraction       220.0      180.0     16     39  no
block-matrix           340.0      420.0     38     62  no
wide-alignment         900.0       40.0      4    180  yes
